--- a/client/CompetencyViz/Config/DefaultInput.ini
+++ b/client/CompetencyViz/Config/DefaultInput.ini
@@ -42,6 +42,16 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
++AxisMappings=(AxisName="Forward",Scale=1.000000,Key=W)
++AxisMappings=(AxisName="Forward",Scale=1.000000,Key=Up)
++AxisMappings=(AxisName="Forward",Scale=-1.000000,Key=S)
++AxisMappings=(AxisName="Right",Scale=1.000000,Key=D)
++AxisMappings=(AxisName="Forward",Scale=-1.000000,Key=Down)
++AxisMappings=(AxisName="Right",Scale=1.000000,Key=Right)
++AxisMappings=(AxisName="Right",Scale=-1.000000,Key=A)
++AxisMappings=(AxisName="Right",Scale=-1.000000,Key=Left)
++AxisMappings=(AxisName="Turn",Scale=1.000000,Key=MouseX)
++AxisMappings=(AxisName="Lookup",Scale=-1.000000,Key=MouseY)
 DefaultTouchInterface=None
 ConsoleKey=None
 -ConsoleKeys=Tilde
