--- a/client/CompetencyViz/Config/DefaultEngine.ini
+++ b/client/CompetencyViz/Config/DefaultEngine.ini
@@ -18,6 +18,7 @@ Orientation=Sensor
 EditorStartupMap=/Game/Maps/Main.Main
 GameDefaultMap=/Game/Maps/Main.Main
 GlobalDefaultGameMode=/Game/Blueprints/BP_GameMode.BP_GameMode_C
+GameInstanceClass=/Game/Blueprints/BP_VariableStore.BP_VariableStore_C
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -64,5 +65,3 @@ InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,bUseMBPOuterBounds=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPOuterBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
 ChaosSettings=(DefaultThreadingModel=DedicatedThread,DedicatedThreadTickMode=VariableCappedWithTarget,DedicatedThreadBufferMode=Double)
-
-
