added missing file

--- a/client/CompetencyViz/Config/DefaultEngine.ini
+++ b/client/CompetencyViz/Config/DefaultEngine.ini
@@ -12,7 +12,8 @@ AppliedDefaultGraphicsPerformance=Maximum
 PackageName=com.iteratec.[PROJECT]
 MinSDKVersion=21
 TargetSDKVersion=21
-Orientation=Sensor
+Orientation=Portrait
+bPackageDataInsideApk=True
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Maps/Main.Main
